--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,4 @@
-REPLICATE_API_KEY=
+REPLICATE_API_KEY="r8_La18awZeNoKfkqle4MSlZNky4mOn12b43H7M9"
 
 # Optional, if you're doing rate limiting
 UPSTASH_REDIS_REST_URL=
@@ -7,8 +7,8 @@ UPSTASH_REDIS_REST_TOKEN=
 # Optional, if you're doing auth
 NEXTAUTH_URL=
 NEXTAUTH_SECRET=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID="515291550695-cprc71tp8bq6kh508mn9qnrdo82ipfl4.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
 DATABASE_URL=
 SHADOW_DATABASE_URL=
 NEXTAUTH_URL=
